# fass

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: publish_to_dockerhub.yml  publish_to_ghcr.yml
fass/: main.py
